--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -1,8 +1,10 @@
 ---
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
-pubDate: 'Jul 02 2022'
-heroImage: '/blog-placeholder-5.jpg'
+pubDate: 2024-01-17
+cover:
+  url: '/blog-placeholder-5.jpg'
+  alt: 'A photograph of a sunset behind a mountain range.'
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
