--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -2,9 +2,10 @@
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
 pubDate: 2024-01-17
+author: mike-connor
 cover:
-  src: '/blog-placeholder-5.jpg'
-  description: 'A photograph of a sunset behind a mountain range.'
+  src: 'https://picsum.photos/1200/300?random=0'
+  alt: 'A photograph of a sunset behind a mountain range.'
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
@@ -20,7 +21,7 @@ If you have existing content authored in MDX, this integration will hopefully ma
 Here is how you import and use a UI component inside of MDX.  
 When you open this page in the browser, you should see the clickable button below.
 
-import HeaderLink from '@cc/HeaderLink.astro';
+import HeaderLink from '@/components/HeaderLink.astro';
 
 <HeaderLink href="#" onclick="alert('clicked!')">
   Embedded component in MDX
