--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -2,10 +2,12 @@
 title: 'Using MDX'
 description: 'Lorem ipsum dolor sit amet'
 pubDate: 2024-01-17
+draft: false
 author: mike-connor
 cover:
   src: 'https://picsum.photos/1200/300?random=0'
   alt: 'A photograph of a sunset behind a mountain range.'
+tags: ['mdx', 'dogs']
 ---
 
 This theme comes with the [@astrojs/mdx](https://docs.astro.build/en/guides/integrations-guide/mdx/) integration installed and configured in your `astro.config.mjs` config file. If you prefer not to use MDX, you can disable support by removing the integration from your config file.
