--- a/src/content/blog/using-mdx.mdx
+++ b/src/content/blog/using-mdx.mdx
@@ -20,10 +20,10 @@ If you have existing content authored in MDX, this integration will hopefully ma
 
 ## Example
 
-Here is how you import and use a UI component inside of MDX.  
+Here is how you import and use a UI component inside of MDX.
 When you open this page in the browser, you should see the clickable button below.
 
-import HeaderLink from '@/components/HeaderLink.astro';
+import HeaderLink from '#components/HeaderLink.astro';
 
 <HeaderLink href="#" onclick="alert('clicked!')">
   Embedded component in MDX
